# yosys-uhdm-plugin

./: CMakeLists.txt
uhdm-plugin/: uhdmastreport.d
